# RoarGraph

./: .gitignore  .gitmodules  CITATION.cff  CLONE.md  CMakeLists.txt  LICENSE  README.md  change_meta_data_in_file.py  export_fbin_from_npy.py  prepare_data.sh  prepare_for_clip_webvid.py  run_roargraph_search_test.sh  run_roargraph_test.sh
.github/workflows/: main.yml
include/: index_bipartite.h  visited_list_pool.h
include/efanna2e/: distance.h  index.h  neighbor.h  util.h
pyroar/: index_bindings.cpp  setup.py
src/: CMakeLists.txt  index.cpp  index_bipartite.cpp
tests/: CMakeLists.txt  test_build_roargraph.cpp  test_only_build_bipartite.cpp  test_search_bipartite.cpp  test_search_roargraph.cpp
